--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,6 @@
-
-DB_NAME=
+DB_NAME=fidelity
 DB_HOST=localhost
-DB_PASSWORD=root
+DB_PASSWORD=1811
 DB_PORT=5432
 DB_USER=postgres
 PORT=1811
@@ -9,7 +8,3 @@ HOST=http://localhost:1811
 G_NAME=alfonsouzcategui2@gmail.com
 G_PASSWORD=rhzdyraxwyrwgweg
 SECRET_KEY=PaswordSecurityLuis
-AWS_ACCESS_KEY_ID=AKIAQDZZODBHWAMTLF52
-AWS_SECRET_ACCESS_KEY=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
-AWS_BUCKET_NAME=
-AWS_REGION=us-east-1
