--- a/backend/.env
+++ b/backend/.env
@@ -5,6 +5,6 @@ DB_PORT=5432
 DB_USER=postgres
 PORT=8005
 HOST=http://localhost:1811
-G_NAME=alfonsouzcategui2@gmail.com
-G_PASSWORD=rhzdyraxwyrwgweg
+G_NAME=corporationglya@gmail.com
+G_PASSWORD=yqcgwxlknrzcsxir
 SECRET_KEY=PaswordSecurityLuis
