--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "socket.io-client": "^4.7.2"
