--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.5",
+    "html5-qrcode": "^2.3.8",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
